<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>wtf.casper</groupId>
    <artifactId>amethyst</artifactId>
    <version>${amethyst.version}</version>
    <packaging>pom</packaging>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <amethyst.version>2.0.0-SNAPSHOT</amethyst.version>
    </properties>

    <distributionManagement>
        <repository>
            <id>casperwtf respository-releases</id>
            <name>casperwtf Repository</name>
            <url>https://maven.casper.wtf/releases</url>
        </repository>
        <snapshotRepository>
            <id>casperwtf respository-snapshots</id>
            <name>casperwtf Repository</name>
            <url>https://maven.casper.wtf/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <modules>
        <module>standalone</module>
        <module>minecraft</module>
        <module>paper</module>
        <module>paper-shaded</module>
        <module>bungee</module>
        <module>velocity</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <argLine>
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.util=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>